Fixed google map problem, and also fixed the spacing of some content in the sub-pages

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@ body,
 body{
 	background-image: url(../images/main.jpg);
 	background-repeat: no-repeat;
-	background-size: 100%;
+	background-size: cover;
 	background-attachment: fixed;
 }
     
